--- a/Task1/Task1.html
+++ b/Task1/Task1.html
@@ -17,7 +17,7 @@
   <body>
     <section class="hero-section">
       <nav class="navbar">
-        <h2>SP FOOD</h2>
+        <h2>RS FOOD</h2>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -25,8 +25,8 @@
         </ul>
       </nav>
       <div class="hero-text">
-        <h2>You deserve a Coke.</h2>
-        <p>Have a chill pill.</p>
+        <h2>You deserve a Burger.</h2>
+        <p>So meaty you'll go crazy.</p>
         <a href="#">Order now</a>
       </div>
     </section>
